versioned_docs/version-4.1/client-api/operations/maintenance/backup/backup-overview.mdx
---
title: "Backup"
hide_table_of_contents: true
sidebar_label: Backup
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Backup
<Admonition type="note" title="Note">

* Create a backup of your data to secure it or to preserve a copy of it in its current state for future reference.  

* RavenDB's ongoing Backup task is designed to run [continuously](../../../../server/ongoing-tasks/backup-overview.mdx#backup--restore-overview).  
  You can run it as a one-time operation as well, using [export](../../../../client-api/smuggler/what-is-smuggler.mdx#export) or executing a backup-task [immediately](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#initiate-immediate-backup-execution).  

* In this page:  
  * [Backup Types](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#backup-types)  
      * [Logical-Backup](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#logical-backup-or-simply-backup)  
      * [Snapshot](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#snapshot)  
  * [Backup Scope](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#backup-scope)  
      * [Full Backup](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#full-backup)  
      * [Incremental Backup](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#incremental-backup)  
  * [Backup to Remote Destinations](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#backup-to-remote-destinations)  
  * [Initiate Immediate Backup Execution](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#initiate-immediate-backup-execution)  
  * [Recommended Precautions](../../../../client-api/operations/maintenance/backup/backup-overview.mdx#recommended-precautions)  

</Admonition>
## Backup Types

#### Logical-Backup  

* Data is backed-up in [compressed](../../../../server/ongoing-tasks/backup-overview.mdx#compression) JSON files.  

* During restoration, RavenDB -  
   * Re-inserts all data into the database.  
   * Re-indexes the data.  

* Restoration Time is therefore **slower** than that required when restoring a Snapshot.  

* Backup size is **significantly smaller** than that of a Snapshot.

* Code Sample:
<TabItem value="logical_full_backup_every_3_hours" label="logical_full_backup_every_3_hours">
<CodeBlock language="csharp">
{`var config = new PeriodicBackupConfiguration
\{
    LocalSettings = new LocalSettings
    \{
        // Local path for storing the backup
        FolderPath = @"E:\\RavenBackups"
    \},

    // Full Backup period (Cron expression for a 3-hours period)
    FullBackupFrequency = "0 */3 * * *",

    // Set backup type to Logical-Backup
    BackupType = BackupType.Backup,

    // Task Name
    Name = "fullBackupTask",
\};
var operation = new UpdatePeriodicBackupOperation(config);
var result = await docStore.Maintenance.SendAsync(operation);
`}
</CodeBlock>
</TabItem>
  Note the usage of [Cron scheduling](https://en.wikipedia.org/wiki/Cron) when setting backup frequency.  
#### Snapshot

* **Snapshot** backups are available for **Enterprise subscribers only**.  
    A SnapShot is a compressed binary duplication of the [database and journals](../../../../server/storage/directory-structure.mdx#storage--directory-structure) file structure at a given point-in-time.  

* During restoration -
   * Re-indexing is not required.  
   * Re-inserting data into the database is not required.  

* Restoration is typically **faster** than that of a logical backup.  

* Snapshot size is typically **larger** than that of a logical backup.  

* Code Sample:  
<TabItem value="backup_type_snapshot" label="backup_type_snapshot">
<CodeBlock language="csharp">
{`// Set backup type to Snapshot
BackupType = BackupType.Snapshot,
`}
</CodeBlock>
</TabItem>
#### Basic Comparison Between a Logical-Backup and a Snapshot:

  | Backup Type | Stored Format | Restoration speed | Task characteristics | Size
  | ------ | ------ | ------ | ------ |
  | Snapshot | Compressed Binary Image | Fast | Ongoing Background Task | Larger than a logical-backup
  | Logical backup |  Compressed Textual Data | Slow | Ongoing Background Task | Smaller than a Snapshot

<Admonition type="note" title="Make sure your server has access to the local backup path." id="make-sure-your-server-has-access-to-the-local-backup-path" href="#make-sure-your-server-has-access-to-the-local-backup-path">
Verify that RavenDB is allowed to store backup files in the path set in `LocalSettings.FolderPath`.
</Admonition>





## Backup Scope

As described in [the overview](../../../../server/ongoing-tasks/backup-overview.mdx#backing-up-and-restoring-a-database), a backup task can create **full** and **incremental** backups.  

* Both backup operations add a single new backup file to the backup folder each time they run. leaving existing backup files untouched.  
* Both are operated by an **ongoing task**.  

#### Full Backup

* There are no preliminary conditions to creating a full backup. Any node can perform this task.  

* To run a full backup, set `FullBackupFrequency`.
<TabItem value="backup_full_backup" label="backup_full_backup">
<CodeBlock language="csharp">
{`// A full-backup will run every 6-hours (Cron expression)
FullBackupFrequency = "0 */6 * * *",
`}
</CodeBlock>
</TabItem>
#### Incremental Backup

* An incremental-backup file is **always in JSON format**. 
  It is so even when the full backup it supplements is a binary snapshot.  
* Incremental Backup ownership
   * An incremental backup can be created only by the node that currently owns the backup task.  
   * The ownership is granted dynamically by the cluster.  
   * A node can run the incremental backup task only after creating a full backup at least once.  

* To run an incremental backup, set `IncrementalBackupFrequency`.
<TabItem value="backup_incremental_backup" label="backup_incremental_backup">
<CodeBlock language="csharp">
{`// An incremental-backup will run every 20 minutes (Cron expression)
IncrementalBackupFrequency = "*/20 * * * *",
`}
</CodeBlock>
</TabItem>



## Backup to Remote Destinations

* Backups can be made locally, as well as to a set of remote locations including -  
   * A network path
   * An FTP/SFTP target
   * Amazon S3 
   * Azure Storage 
   * Amazon Glacier 

* RavenDB will store data in a local folder first, and transfer it to the remote 
  destination from the local one.  
   * If a local folder hasn't been specified, RavenDB will use the 
     temp folder defined in its Storage.TempPath setting.  
     If Storage.TempPath is not defined, the temporary files 
     will be created at the same location as the data file.  
     In either case, the folder will be used as temporary storage 
     and the local files deleted from it when the transfer is completed.
   * If a local folder **has** been specified, RavenDB will use it both 
     for the transfer and as its permanent local backup location.  

* Remote Backup Destinations Code Sample:
<TabItem value="backup_remote_destinations" label="backup_remote_destinations">
<CodeBlock language="csharp">
{`var config = new PeriodicBackupConfiguration
\{
    LocalSettings = new LocalSettings
    \{
        FolderPath = @"E:\\RavenBackups"
    \},

    // FTP Backup settings
    FtpSettings = new FtpSettings
    \{
        Url = "192.168.10.4:8080",
        UserName = "John",
        Password = "JohnDoe38"
    \},

    // Azure Backup settings
    AzureSettings = new AzureSettings
    \{
        StorageContainer = "storageContainer",
        RemoteFolderName = "remoteFolder",
        AccountName = "JohnAccount",
        AccountKey = "key"
    \},

    // Amazon S3 bucket settings.
    S3Settings = new S3Settings
    \{
        AwsAccessKey = "your access key here",
        AwsSecretKey = "your secret key here",
        AwsRegionName = "OPTIONAL",
        BucketName = "john-bucket"
    \},

    // Amazon Glacier settings.
    GlacierSettings = new GlacierSettings
    \{
        AwsAccessKey = "your access key here",
        AwsSecretKey = "your secret key here",
        AwsRegionName = "OPTIONAL",
        VaultName = "john-glacier",
        RemoteFolderName = "john/backups"
    \},

    // Google Cloud Backup settings
    GoogleCloudSettings = new GoogleCloudSettings
    \{
        BucketName = "RavenBucket",
        RemoteFolderName = "BackupFolder",
        GoogleCredentialsJson = "GoogleCredentialsJson"
    \}

\};
var operation = new UpdatePeriodicBackupOperation(config);
var result = await docStore.Maintenance.SendAsync(operation);
`}
</CodeBlock>
</TabItem>
 
 <Admonition type="info" title="Tip" id="tip" href="#tip">
    Use AWS [IAM](https://docs.aws.amazon.com/IAM/latest/UserGuide/introduction_access-management.html) (Identity and Access Management) 
    to restrict users access while they create backups.  
    E.g. -  
<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
    "Version": "2012-10-17",
    "Statement": [
        \{
            "Sid": "VisualEditor0",
            "Effect": "Allow",
            "Action": "s3:PutObject",
            "Resource": "arn:aws:s3:::BUCKET_NAME/*"
        \},
        \{
            "Sid": "VisualEditor1",
            "Effect": "Allow",
            "Action": [
                "s3:ListBucket",
                "s3:GetBucketAcl",
                "s3:GetBucketLocation"
            ],
            "Resource": "arn:aws:s3:::BUCKET_NAME"
        \}
    ]
\}
`}
</CodeBlock>
</TabItem>
 </Admonition>



## Initiate Immediate Backup Execution

The Backup task [runs continuously](../../../../server/ongoing-tasks/backup-overview.mdx#backup--restore-overview) as an ongoing task, but you can also operate the task immediately if you wish to.  

* To execute an existing backup task immediately, use the `StartBackupOperation` method.  
<TabItem value="initiate_immediate_backup_execution" label="initiate_immediate_backup_execution">
<CodeBlock language="csharp">
{`// Create a new backup task
var operation = new UpdatePeriodicBackupOperation(config);
var result = await docStore.Maintenance.SendAsync(operation);

// Run the backup task immediately
await docStore.Maintenance.SendAsync(new StartBackupOperation(true, result.TaskId));
`}
</CodeBlock>
</TabItem>

  * Definition:
<TabItem value="start_backup_operation" label="start_backup_operation">
<CodeBlock language="csharp">
{`public StartBackupOperation(bool isFullBackup, long taskId)
`}
</CodeBlock>
</TabItem>

  * Parameters:
    
        | Parameter | Type | Functionality |
        | ------ | ------ | ------ |
        | isFullBackup | bool | true: full backup <br/> false: incremental backup |
        | taskId |  long | The task ID returned by RavenDB |


* To verify the execution results, use the `GetPeriodicBackupStatusOperation` method.  
<TabItem value="get_backup_execution_results" label="get_backup_execution_results">
<CodeBlock language="csharp">
{`// Pass the the ongoing backup task ID to GetPeriodicBackupStatusOperation  
var backupStatus = new GetPeriodicBackupStatusOperation(result.TaskId);
`}
</CodeBlock>
</TabItem>
   * Return Value:  
     The status structure that **GetPeriodicBackupStatusOperation** returns, is filled with backup parameters you previously configured and with the execution results.  
<TabItem value="periodic_backup_status" label="periodic_backup_status">
<CodeBlock language="csharp">
{`public class PeriodicBackupStatus : IDatabaseTaskStatus
\{
    public long TaskId \{ get; set; \}
    public BackupType BackupType \{ get; set; \}
    public bool IsFull \{ get; set; \}
    public string NodeTag \{ get; set; \}
    public DateTime? LastFullBackup \{ get; set; \}
    public DateTime? LastIncrementalBackup \{ get; set; \}
    public DateTime? LastFullBackupInternal \{ get; set; \}
    public DateTime? LastIncrementalBackupInternal \{ get; set; \}
    public LocalBackup LocalBackup \{ get; set; \}
    public UploadToS3 UploadToS3;
    public UploadToGlacier UploadToGlacier;
    public UploadToAzure UploadToAzure;
    public UploadToFtp UploadToFtp;
    public long? LastEtag \{ get; set; \}
    public LastRaftIndex LastRaftIndex \{ get; set; \}
    public string FolderName \{ get; set; \}
    public long? DurationInMs \{ get; set; \}
    public long Version \{ get; set; \}
    public Error Error \{ get; set; \}
    public long? LastOperationId \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>


## Recommended Precautions
<Admonition type="warning" title="Warning">

* **Don't substitute RavenDB's backup procedures with simply copying the database folder yourself**.  
  The official backup procedure satisfies needs that simply copying the database folder does not. E.g. -  
   * A reliable point-in-time freeze of backed up data.  
   * An ACIDity of backed-up data, to keep its independence during restoration.  
     
* **Regularly remove backup files**.  
  Note that RavenDB does **not** automatically remove backup files. As they continue to aggregate, it is important that you take care of their regular removal.  
  You can use services like crontab (a linux scheduling procedure) to create an old-backups-removal routine.  

* **Locate backup files in a location other than your database's**.  
  Note that backup files are always stored in a local folder first (even when the final backup destination is remote).  
  Make sure that this local folder is not where your database is stored, as a precaution to keep vacant database storage space.  
     
</Admonition>


 
